// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Sidebar /> renders correctly with close icon 1`] = `
<button
  aria-controls="sidebar"
  className="sidebar-toggle-btn px-1 mr-2 text-dark btn btn-link"
  disabled={false}
  iconBefore={[Function]}
  onClick={[Function]}
  type="button"
>
  <span
    className="sr-only"
  >
    close menu
  </span>
</button>
`;

exports[`<Sidebar /> renders correctly with menu icon 1`] = `
<button
  aria-controls="sidebar"
  className="sidebar-toggle-btn px-1 mr-2 text-dark btn btn-link"
  disabled={false}
  iconBefore={[Function]}
  onClick={[Function]}
  type="button"
>
  <span
    className="sr-only"
  >
    open menu
  </span>
</button>
`;
